Temporarily expand all accordion sections.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -33,12 +33,8 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">About Us</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+          <div class="expandable__toggle">
+            <h3 class="expandable__toggle--title">About Us</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -56,12 +52,8 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Why work with us?</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+          <div class="expandable__toggle">
+            <h3 class="expandable__toggle--title">Why work with us?</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -84,12 +76,8 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Location</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+          <div class="expandable__toggle">
+            <h3 class="expandable__toggle--title">Location</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -102,12 +90,8 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Equity, diversity, inclusion, belonging and antiracism</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+          <div class="expandable__toggle">
+            <h3 class="expandable__toggle--title">Equity, diversity, inclusion, belonging and antiracism</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -133,11 +117,7 @@ layout: default
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
           <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Software Engineering Manager</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+            <h3 class="expandable__toggle--title">Software Engineering Manager</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -155,12 +135,8 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <div class="expandable__toggle">
             <span class="expandable__toggle--title">Research assistant / student fellow</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
@@ -196,12 +172,8 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Fellows</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
+          <div class="expandable__toggle">
+            <h3 class="expandable__toggle--title">Fellows</h3>
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
