Delete interactive attributes that I missed; fix spacing.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -33,7 +33,7 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <div class="expandable__toggle">
             <h3 class="expandable__toggle--title">Software Engineering Manager</h3>
           </div>
           <div class="expandable__content">
@@ -60,10 +60,10 @@ layout: default
               <p>
                 The Library Innovation Lab is a team of librarians, programmers, artists, and lawyers with a broad mission: to
                 build open-source tools and services to advance open knowledge.</p>
-              <p>We currently support three long-running services (
-                  <a class="interactive-link dark reverse" href="https://perma.cc">Perma</a>,
+              <p>We currently support three long-running services
+                  (<a class="interactive-link dark reverse" href="https://perma.cc">Perma</a>,
                   <a class="interactive-link dark reverse" href="https://opencasebook.org">H2O Open Casebook</a>, and the
-                  <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a> ) as well as a range of shorter-term experiments.
+                  <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a>) as well as a range of shorter-term experiments.
               </p>
               <p>On the tech side, we work most often with Django, Vue, and Postgres.
               </p>
