Accordion toggles need to be buttons.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -33,13 +33,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">About Us</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -56,13 +56,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Why work with us?</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -84,13 +84,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Location</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -102,13 +102,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Equity, diversity, inclusion, belonging and antiracism</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -132,13 +132,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Software Engineering Manager</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>Our Software Engineering Manager leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.</p>
@@ -155,13 +155,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Research assistant / student fellow</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -196,13 +196,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <div role="button" class="expandable__toggle" aria-expanded="false">
+          <button type="button" class="expandable__toggle" aria-expanded="false">
             <span class="expandable__toggle--title">Fellows</span>
-            <div class="expandable__icon">
-              <div></div>
-              <div></div>
-            </div>
-          </div>
+            <span class="expandable__icon">
+              <span></span>
+              <span></span>
+            </span>
+          </button>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
