Use a heading for each subsection; to make HTML legal, therefore reduce scope of button.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -33,13 +33,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">About Us</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle">
+            <h3 id="about-us" class="expandable__toggle--title">About Us</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="about-us">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -56,13 +56,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Why work with us?</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle">
+            <h3 id="why" class="expandable__toggle--title">Why work with us?</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="why">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -84,13 +84,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Location</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle">
+            <h3 id="location" class="expandable__toggle--title">Location</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="location">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -102,13 +102,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Equity, diversity, inclusion, belonging and antiracism</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle">
+            <h3 id="ediba" class="expandable__toggle--title">Equity, diversity, inclusion, belonging and antiracism</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="ediba">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -132,13 +132,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Software Engineering Manager</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle" >
+            <h3 id="sem" class="expandable__toggle--title">Software Engineering Manager</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="sem">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>Our Software Engineering Manager leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.</p>
@@ -155,13 +155,13 @@ layout: default
     <div class="md:grid md:grid-cols-12">
       <div class="w-full md:col-span-9 md:col-start-4">
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Research assistant / student fellow</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle">
+            <h3 id="research-assistant" class="expandable__toggle--title">Research assistant / student fellow</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="research-assistant">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
@@ -196,13 +196,13 @@ layout: default
           </div>
         </lil-expandable>
         <lil-expandable class="expandable">
-          <button type="button" class="expandable__toggle" aria-expanded="false">
-            <span class="expandable__toggle--title">Fellows</span>
-            <span class="expandable__icon">
+          <div class="expandable__toggle" >
+            <h3 id="fellows" class="expandable__toggle--title">Fellows</h3>
+            <button type="button" class="expandable__icon" aria-expanded="false" aria-labelledby="fellows">
               <span></span>
               <span></span>
-            </span>
-          </button>
+            </button>
+          </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>
