Fixup email on pages.

--- a/app/404.html
+++ b/app/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
       We can’t seem to find the page you are looking for.
     </h2>
     <p>
-      To report a broken link, please <a class="interactive-link dark reverse" href="mailto:lil@law.harvard.edu">contact us.</a>
+      To report a broken link, please <a class="interactive-link dark reverse" href="mailto:{{ site.email }}">contact us.</a>
     </p>
   </div>
   <div class="w-full -translate-y-[150px] relative z-[0]">
