--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@ sharing-card-type: summary_large_image
         <div class="flex flex-col gap-40 md:gap-50">
           <div class="label-value">
             <h3 class="label">Email</h3>
-            <a href="mailto:lil@law.harvard.edu" class="value interactive-link dark reverse">lil@law.harvard.edu</a>
+            <a href="mailto:{{ site.email }}" class="value interactive-link dark reverse">{{ site.email }}</a>
           </div>
           <div class="label-value">
             <h3 class="label">Contact us in person</h3>
