--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -190,7 +190,7 @@ layout: default
               </p>
               <p>
                 <strong>To apply:</strong> send a statement of interest to
-                <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position" class="interactive-link dark reverse">lil@law.harvard.edu</a>.
+                <a href="mailto:{{ site.email }}?subject=Research%20Assistant%20position" class="interactive-link dark reverse">{{ site.email }}</a>.
               </p>
             </div>
           </div>
@@ -243,7 +243,7 @@ layout: default
               </p>
               <p>
                 <strong>To apply:</strong> Email a résumé and statement of interest to
-                <a href="mailto:lil@law.harvard.edu?subject=Fellowship" class="interactive-link dark reverse">lil@law.harvard.edu</a>.
+                <a href="mailto:{{ site.email }}?subject=Fellowship" class="interactive-link dark reverse">{{ site.email }}</a>.
               </p>
             </div>
           </div>
