--- a/app/contact/index.html
+++ b/app/contact/index.html
@@ -12,38 +12,4 @@ layout: default
   </div>
 </section>
 
-<section class="container pb-100 md:pb-200">
-  <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
-    <h2 class="h2">Get in touch</h2>
-    <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24 flex flex-col md:grid md:grid-cols-2 gap-24 md:gap-32">
-      <div class="flex flex-col gap-50">
-        <div class="label-value">
-          <h3 class="label">Email</h3>
-          <a href="mailto:{{ site.email }}" class="value interactive-link dark reverse">{{ site.email }}</a>
-        </div>
-        <div class="label-value">
-          <h3 class="label">Contact us in person</h3>
-          <address class="value flex flex-col not-italic">
-            <span>The Reginald F. Lewis Law Center</span>
-            <span>1557 Massachusetts Avenue</span>
-            <span>Cambridge, MA 02138</span>
-          </address>
-          {% include arrow-link.html label="Map" href="https://www.google.com/maps/place/1557+Massachusetts+Ave,+Cambridge,+MA+02138/@42.3782483,-71.1213313,17z/data=!3m1!4b1!4m5!3m4!1s0x89e37741bde17be1:0xf64e9368998f6967!8m2!3d42.3782444!4d-71.1191426" target="_blank" reverse=true %}
-        </div>
-      </div>
-      <div class="flex flex-col gap-32">
-        <div class="label-value">
-          <h3 class="label">Newsletter</h3>
-          <p class="value max-w-[330px]">
-            Get updates on our latest projects and research.
-          </p>
-          {% include arrow-link.html label="Sign Up" href="https://ocb.to/lawvocado" target="_blank" reverse=true %}
-        </div>
-        <div class="label-value">
-          <h3 class="label">GitHub</h3>
-          {% include arrow-link.html label="GitHub" href=site.github_url target="_blank" reverse=true %}
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include contact-section.html heading="Get In Touch" %}
