--- a/app/index.html
+++ b/app/index.html
@@ -78,39 +78,6 @@ sharing-card-type: summary_large_image
         {% include arrow-link.html label="View All Projects" href="/our-work/" %}
       </div>
     </div>
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
-      <h2 class="h2">Contact Us</h2>
-      <div class="md:col-span-2 body-text flex flex-col pt-24 flex flex-col md:grid md:grid-cols-2 gap-40">
-        <div class="flex flex-col gap-40 md:gap-50">
-          <div class="label-value">
-            <h3 class="label">Email</h3>
-            <a href="mailto:{{ site.email }}" class="value interactive-link dark reverse">{{ site.email }}</a>
-          </div>
-          <div class="label-value">
-            <h3 class="label">Contact us in person</h3>
-            <address class="value flex flex-col not-italic">
-              <span>The Reginald F. Lewis Law Center</span>
-              <span>1557 Massachusetts Avenue</span>
-              <span>Cambridge, MA 02138</span>
-            </address>
-            {% include arrow-link.html label="Map" href="#" target="_blank" reverse=true %}
-          </div>
-        </div>
-        <div class="flex flex-col gap-40 md:gap-50">
-          <div class="label-value">
-            <h3 class="label">Newsletter</h3>
-            <p class="value max-w-[330px]">
-              Get updates on our latest projects and research.
-            </p>
-            {% include arrow-link.html label="Sign Up" href="https://ocb.to/lawvocado" target="_blank" reverse=true %}
-          </div>
-          <div class="label-value">
-            <h3 class="label">GitHub</h3>
-            {% include arrow-link.html label="GitHub" href=site.github_url target="_blank" reverse=true %}
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
-
+  {% include contact-section.html heading="Contact Us" %}
 </div>
