Containers must be blocks.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -22,7 +22,7 @@ layout: default
             alt=""
             class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
-      <figcaption class="inline-block container text-16 py-8">
+      <figcaption class="block container text-16 py-8">
         <strong>Credit: Bob O’Connor</strong>
       </figcaption>
     </figure>
