--- a/app/about/index.html
+++ b/app/about/index.html
@@ -31,7 +31,7 @@ layout: default
             alt=""
             class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
-      <figcaption class="inline-block container text-16 py-8">
+      <figcaption class="block container text-16 py-8">
         <strong>Credit: Bob O’Connor</strong> With a focus on fostering collaboration and community, the modernist building has been transformed into a 21st-century work environment.
       </figcaption>
     </figure>
