Add additional intermediate tablet breakpoint.

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@ sharing-card-type: summary_large_image
   <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40 mt-36 sm:mt-48">
     <h2 class="h2">Who We Are</h2>
     <div class="md:col-span-2 body-text flex flex-col gap-28 md:gap-50 md:pt-24">
-      <div class="flex flex-col gap-20 max-w-[650px]">
+      <div class="flex flex-col gap-20">
         <p>The Library Innovation Lab is a team working at the intersection of libraries, technology, and law.</p>
         <p>Our team combines librarians, technologists, lawyers, and more to build tools and conduct research to empower more people to access and build our shared knowledge and cultural heritage.</p>
       </div>
@@ -74,7 +74,7 @@ sharing-card-type: summary_large_image
     <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-50 pb-50 md:pb-72 border-b-1 border-black">
       <h2 class="h2">Our Work</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-28 md:gap-50">
-        <div class="flex flex-col gap-20 max-w-[650px]">
+        <div class="flex flex-col gap-20">
           <p>We build and explore new technology through the lens of library principles.</p>
           <p>Conducting research to further our understanding of certain technologies allows us to share our knowledge with those in the library field, or those in industry interested in making their tech more private, secure, or focused on the long term.</p>
         </div>
