--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,7 @@ sharing-card-type: summary_large_image
     <h2 class="h2">Who We Are</h2>
     <div class="md:col-span-2 body-text flex flex-col gap-28 md:gap-50 md:pt-24">
       <div class="flex flex-col gap-20">
-        <p>The Library Innovation Lab is a team working at the intersection of libraries, technology, and law.</p>
-        <p>Our team combines librarians, technologists, lawyers, and more to build tools and conduct research to empower more people to access and build our shared knowledge and cultural heritage.</p>
+        <p>Our team combines librarians, technologists, lawyers, and more to build tools and conduct research that empowers access to our shared knowledge and cultural heritage.</p>
       </div>
       {% include arrow-link.html label="Learn More About Who We Are" href="/about/" reverse=true %}
     </div>
@@ -75,8 +74,7 @@ sharing-card-type: summary_large_image
       <h2 class="h2">Our Work</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-28 md:gap-50">
         <div class="flex flex-col gap-20">
-          <p>We build and explore new technology through the lens of library principles.</p>
-          <p>Conducting research to further our understanding of certain technologies allows us to share our knowledge with those in the library field, or those in industry interested in making their tech more private, secure, or focused on the long term.</p>
+          <p>Platforms like Perma.cc translate the traditional roles of libraries into the digital age. Explorations like warcGPT empower practitioners to learn and leverage new technologies in the context of their field.</p>
         </div>
         {% include arrow-link.html label="View All Projects" href="/our-work/" reverse=true %}
       </div>
