--- a/app/about/index.html
+++ b/app/about/index.html
@@ -32,7 +32,7 @@ layout: default
             class="img-full-width aspect-[1/.45] object-cover overflow-hidden">
       </picture>
       <figcaption class="block container text-16 py-8">
-        <strong>Credit: Bob O’Connor</strong> With a focus on fostering collaboration and community, the modernist building has been transformed into a 21st-century work environment.
+        <strong>Credit: Bob O’Connor</strong>
       </figcaption>
     </figure>
   </section>
@@ -41,7 +41,7 @@ layout: default
     <div class="container flex flex-col md:grid md:grid-cols-2 gap-32 md:gap-100 md:items-center">
       <h2 class="h2">Library principles can manifest in any technology and provide a roadmap to mindful building.</h2>
       <div class="flex flex-col gap-20 md:gap-30 body-text">
-        <h3 class="label">Those we seek to cultivate</h3>
+        <h3 class="label">We strive to cultivate</h3>
         <div class="flex flex-col gap-16 md:gap-24 max-w-[520px]">
           <p>Collection, curation, and preservation of knowledge and its provenance</p>
           <p>Equal and private access to knowledge</p>
