--- a/app/our-work.html
+++ b/app/our-work.html
@@ -1,6 +1,6 @@
 ---
 title: Our Work
-subtitle: We build and explore new technology through the lens of library principles.
+subtitle: We build, research, and explore new technology through the lens of library principles.
 slug: projects
 description: "Our projects attempt to make something better, simpler, more transparent, or more fun."
 layout: default
@@ -18,10 +18,6 @@ layout: default
     <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
       <h2 class="h2">Research</h2>
       <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
-        <div class="flex flex-col gap-20 max-w-[700px]">
-          <p>Research at LIL is structured around a variety of modes and outcomes, though it all ultimately serves our goal of fusing the library world with new technologies.</p>
-          <p>Some of our research is explicitly tied to our ongoing tentpole projects, while other explorations may become larger projects down the line.</p>
-        </div>
       </div>
     </div>
 
@@ -103,10 +99,6 @@ layout: default
       <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
         <h2 class="h2">Past Projects</h2>
         <div class="md:col-span-2 body-text flex flex-col gap-50 md:pt-24">
-          <div class="flex flex-col gap-20 max-w-[700px]">
-            <p>At the Library Innovation Lab we are also in pursuit of understanding exploration as a practice.</p>
-            <p>While not exhaustive, these are projects we have worked on, tinkered with, and ultimately sunsetted for various reasons.</p>
-          </div>
         </div>
       </div>
       <div class="flex flex-col">
