--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -8,7 +8,6 @@ layout: default
   <div class="page-hero simple">
     <h1 class="page-hero__title">{{ page.title }}</h1>
     <h2 class="page-hero__subtitle flex flex-col gap-24">
-      <span>The Library Innovation Lab is a unit of the Harvard Law School Library and shares space with the Berkman Klein Center for Internet and Society.</span>
       <span>Joining our team means standing at the intersection of law, librarianship, and technology within an academic context. We offer a low pressure, self-directed environment with lots of room to explore, learn, collaborate, and teach.</span>
     </h2>
   </div>
@@ -50,8 +49,6 @@ layout: default
                   <a class="interactive-link dark reverse" href="https://opencasebook.org">H2O Open Casebook</a>, and the
                   <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a> ) as well as a range of shorter-term experiments.
               </p>
-              <p>On the tech side, we work most often with Django, Vue, and Postgres.
-              </p>
             </div>
           </div>
         </lil-expandable>
@@ -65,11 +62,6 @@ layout: default
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
-              <p>
-                LIL offers a rare mix of contemplation and action: we are a small software lab within one of the world’s
-                largest law libraries, with a mission both to try new things and to think deeply about what ought to exist
-                for the long haul. Our mission offers a range of benefits for staff:
-              </p>
               <p>
                 <strong>Job stability and support.</strong> While we maintain the creative atmosphere and flexibility of a small innovation lab, we're backed by an established institution with strong benefits and support for employees.</p>
               <p>
@@ -93,9 +85,9 @@ layout: default
           </div>
           <div class="expandable__content">
             <div class="expandable__content--inner">
+              <p>The Library Innovation Lab is a unit of the Harvard Law School Library and shares space with the Berkman Klein Center for Internet and Society.</p>
               <p>
-                We are based in a newly-renovated space on the Harvard Law School campus. Our full-time staff positions are
-                hybrid/in-person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
+                We are based in a newly-renovated space on the Harvard Law School campus. Our full-time staff positions are hybrid/in-person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
                 positions may be remote by individual arrangement.
               </p>
             </div>
