--- a/app/contact/index.html
+++ b/app/contact/index.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 slug: contact
-description: Follow us on Twitter or shoot us an email if you’re interested in any of our projects or sketches. All of our code is open source. Send a pull request on GitHub if you want to collaborate.
+description: Sign up for our newsletter or shoot us an email if you’re interested in any of our projects or sketches. All of our code is open source. Send a pull request on GitHub if you want to collaborate.
 layout: default
 ---
 
