Change prominent link to Twitter, to point to our blog instead.

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@ sharing-card-type: summary_large_image
     <h2 class="text-14 md:text-18 tracking-8 uppercase font-medium">Follow our latest projects</h2>
     <ul class="flex items-center gap-60 text-[24px] leading-[120%]">
       <li>
-        {% include arrow-link.html label="Twitter" href="https://twitter.com" target="_blank" reverse=true %}
+        {% include arrow-link.html label="Blog" href="/blog/" reverse=true %}
       </li>
       <li>
         {% include arrow-link.html label="Newsletter" href="https://ocb.to/lawvocado" target="_blank" reverse=true %}
