Page descriptions are not headings.

--- a/app/our-work.html
+++ b/app/our-work.html
@@ -10,7 +10,7 @@ layout: default
   <section class="container">
     <div class="page-hero">
       <h1 class="page-hero__title">{{ page.title }}</h1>
-      <h2 class="page-hero__subtitle">{{page.subtitle}}</h2>
+      <div class="page-hero__subtitle">{{page.subtitle}}</div>
     </div>
   </section>
 
