--- a/app/contact/index.html
+++ b/app/contact/index.html
@@ -8,7 +8,7 @@ layout: default
 <section class="container">
   <div class="page-hero">
     <h1 class="page-hero__title">{{ page.title }}</h1>
-    <h2 class="page-hero__subtitle">{{page.description}}</h2>
+    <div class="page-hero__subtitle">{{page.description}}</div>
   </div>
 </section>
 
