--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -7,9 +7,9 @@ layout: default
 <section class="container">
   <div class="page-hero simple">
     <h1 class="page-hero__title">{{ page.title }}</h1>
-    <h2 class="page-hero__subtitle flex flex-col gap-24">
+    <div class="page-hero__subtitle flex flex-col gap-24">
       <span>Joining our team means standing at the intersection of law, librarianship, and technology within an academic context. We offer a low pressure, self-directed environment with lots of room to explore, learn, collaborate, and teach.</span>
-    </h2>
+    </div>
   </div>
 </section>
 
