Set footer spacing in one spot.

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -110,7 +110,7 @@ layout: default
     </section>
   </section>
 
-  <section class="container flex flex-col gap-80 md:gap-160 pb-72 md:pb-84">
+  <section class="container flex flex-col gap-80 md:gap-160">
     <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
       <h2 class="h2">Supported By</h2>
     </div>
