--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -13,7 +13,7 @@ layout: default
   </div>
 </section>
 
-<div class="flex flex-col gap-50 md:gap-80 pb-72 md:pb-84">
+<div class="flex flex-col gap-50 md:gap-80">
   <section>
     <figure>
       <picture>
