--- a/app/our-work.html
+++ b/app/our-work.html
@@ -1,7 +1,7 @@
 ---
 title: Our Work
+slug: our-work
 subtitle: We build, research, and explore new technology through the lens of library principles.
-slug: projects
 description: "Our projects attempt to make something better, simpler, more transparent, or more fun."
 layout: default
 ---
@@ -94,7 +94,7 @@ layout: default
     {% endfor %}
   </section>
 
-  <section class="bg-yellow pt-24 md:pt-80">
+  <section class="bg-yellow pt-24 md:pt-80 pb-[theme(footerPadding.sm)] md:pb-[theme(footerPadding.lg)] ">
     <div class="container flex flex-col gap-40">
       <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
         <h2 class="h2">Past Projects</h2>
